--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,21 @@
+colorama==0.4.6
+exceptiongroup==1.2.2
+iniconfig==2.0.0
+Jinja2==3.1.5
 joblib==1.4.2
+MarkupSafe==3.0.2
 numpy==2.2.2
+packaging==24.2
+pandas==2.2.3
+pdoc==15.0.1
+pluggy==1.5.0
+Pygments==2.19.1
+pytest==8.3.4
+python-dateutil==2.9.0.post0
+pytz==2025.1
 scikit-learn==1.6.1
 scipy==1.15.1
+six==1.17.0
 threadpoolctl==3.5.0
+tomli==2.2.1
+tzdata==2025.1
