--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 asttokens==3.0.0
+attrs==25.1.0
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.1
@@ -7,6 +8,7 @@ debugpy==1.8.13
 decorator==5.2.1
 exceptiongroup==1.2.2
 executing==2.2.0
+fastjsonschema==2.21.1
 fonttools==4.56.0
 iniconfig==2.0.0
 ipykernel==6.29.5
@@ -14,6 +16,8 @@ ipython==8.33.0
 jedi==0.19.2
 Jinja2==3.1.5
 joblib==1.4.2
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
@@ -21,6 +25,7 @@ MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
 narwhals==1.29.1
+nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==2.2.2
 packaging==24.2
@@ -42,6 +47,8 @@ python-dateutil==2.9.0.post0
 pytz==2025.1
 pywin32==308
 pyzmq==26.2.1
+referencing==0.36.2
+rpds-py==0.23.1
 scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
