--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 asttokens==3.0.0
 attrs==25.1.0
+beautifulsoup4==4.13.3
+certifi==2025.1.31
+charset-normalizer==3.4.1
 colorama==0.4.6
 comm==0.2.2
 contourpy==1.3.1
@@ -10,6 +13,8 @@ exceptiongroup==1.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
 fonttools==4.56.0
+frozendict==2.4.6
+idna==3.10
 iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.33.0
@@ -24,6 +29,7 @@ kiwisolver==1.4.8
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
+multitasking==0.0.11
 narwhals==1.29.1
 nbformat==5.10.4
 nest-asyncio==1.6.0
@@ -33,6 +39,7 @@ pandas==2.2.3
 parso==0.8.4
 patsy==1.0.1
 pdoc==15.0.1
+peewee==3.17.9
 pillow==11.1.0
 platformdirs==4.3.6
 plotly==6.0.0
@@ -48,12 +55,14 @@ pytz==2025.1
 pywin32==308
 pyzmq==26.2.1
 referencing==0.36.2
+requests==2.32.3
 rpds-py==0.23.1
 ruptures==1.1.9
 scikit-learn==1.6.1
 scipy==1.15.1
 seaborn==0.13.2
 six==1.17.0
+soupsieve==2.6
 stack-data==0.6.3
 statsmodels==0.14.4
 threadpoolctl==3.5.0
@@ -62,4 +71,6 @@ tornado==6.4.2
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.1
+urllib3==2.3.0
 wcwidth==0.2.13
+yfinance==0.2.54
