--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
+alembic==1.15.1
 asttokens==3.0.0
 attrs==25.1.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
 colorama==0.4.6
+colorlog==6.9.0
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
+Cython==3.0.12
 debugpy==1.8.13
 decorator==5.2.1
 exceptiongroup==1.2.2
@@ -14,6 +17,7 @@ executing==2.2.0
 fastjsonschema==2.21.1
 fonttools==4.56.0
 frozendict==2.4.6
+greenlet==3.1.1
 idna==3.10
 iniconfig==2.0.0
 ipykernel==6.29.5
@@ -26,6 +30,7 @@ jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
+Mako==1.3.9
 MarkupSafe==3.0.2
 matplotlib==3.10.1
 matplotlib-inline==0.1.7
@@ -34,6 +39,7 @@ narwhals==1.29.1
 nbformat==5.10.4
 nest-asyncio==1.6.0
 numpy==2.2.2
+optuna==4.2.1
 packaging==24.2
 pandas==2.2.3
 parso==0.8.4
@@ -53,6 +59,7 @@ pytest==8.3.4
 python-dateutil==2.9.0.post0
 pytz==2025.1
 pywin32==308
+PyYAML==6.0.2
 pyzmq==26.2.1
 referencing==0.36.2
 requests==2.32.3
@@ -63,11 +70,13 @@ scipy==1.15.1
 seaborn==0.13.2
 six==1.17.0
 soupsieve==2.6
+SQLAlchemy==2.0.38
 stack-data==0.6.3
 statsmodels==0.14.4
 threadpoolctl==3.5.0
 tomli==2.2.1
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.12.2
 tzdata==2025.1
