--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ attrs==25.1.0
 beautifulsoup4==4.13.3
 certifi==2025.1.31
 charset-normalizer==3.4.1
+click==8.1.8
 colorama==0.4.6
 colorlog==6.9.0
 comm==0.2.2
@@ -30,6 +31,7 @@ jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
 kiwisolver==1.4.8
+lxml==5.3.1
 Mako==1.3.9
 MarkupSafe==3.0.2
 matplotlib==3.10.1
@@ -38,6 +40,7 @@ multitasking==0.0.11
 narwhals==1.29.1
 nbformat==5.10.4
 nest-asyncio==1.6.0
+nltk==3.9.1
 numpy==2.2.2
 optuna==4.2.1
 packaging==24.2
@@ -62,6 +65,7 @@ pywin32==308
 PyYAML==6.0.2
 pyzmq==26.2.1
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.3
 rpds-py==0.23.1
 ruptures==1.1.9
