--- a/requirements.txt
+++ b/requirements.txt
@@ -2,61 +2,84 @@ alembic==1.15.1
 asttokens==3.0.0
 attrs==25.1.0
 beautifulsoup4==4.13.3
+blinker==1.9.0
+category_encoders==2.7.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
 click==8.1.8
+cloudpickle==3.1.1
 colorama==0.4.6
 colorlog==6.9.0
 comm==0.2.2
 contourpy==1.3.1
 cycler==0.12.1
 Cython==3.0.12
+dash==2.18.2
+dash-core-components==2.0.0
+dash-html-components==2.0.0
+dash-table==5.0.0
 debugpy==1.8.13
 decorator==5.2.1
+deprecation==2.1.0
 exceptiongroup==1.2.2
 executing==2.2.0
 fastjsonschema==2.21.1
+Flask==3.0.3
 fonttools==4.56.0
 frozendict==2.4.6
 greenlet==3.1.1
 idna==3.10
+imbalanced-learn==0.13.0
+importlib_metadata==8.6.1
 iniconfig==2.0.0
 ipykernel==6.29.5
 ipython==8.33.0
+ipywidgets==8.1.5
+itsdangerous==2.2.0
 jedi==0.19.2
 Jinja2==3.1.5
-joblib==1.4.2
+joblib==1.3.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 jupyter_client==8.6.3
 jupyter_core==5.7.2
+jupyterlab_widgets==3.0.13
+kaleido==0.2.1
 kiwisolver==1.4.8
+lightgbm==4.6.0
+llvmlite==0.44.0
 lxml==5.3.1
 Mako==1.3.9
 MarkupSafe==3.0.2
-matplotlib==3.10.1
+matplotlib==3.7.5
 matplotlib-inline==0.1.7
 multitasking==0.0.11
 narwhals==1.29.1
 nbformat==5.10.4
 nest-asyncio==1.6.0
 nltk==3.9.1
-numpy==2.2.2
+numba==0.61.0
+numpy==1.26.4
 optuna==4.2.1
+orjson==3.10.15
 packaging==24.2
-pandas==2.2.3
+pandas==2.1.4
 parso==0.8.4
 patsy==1.0.1
 pdoc==15.0.1
 peewee==3.17.9
 pillow==11.1.0
 platformdirs==4.3.6
-plotly==6.0.0
+plotly==5.24.1
+plotly-resampler==0.10.0
 pluggy==1.5.0
+pmdarima==2.0.4
 prompt_toolkit==3.0.50
 psutil==7.0.0
 pure_eval==0.2.3
+pycaret==3.3.2
 Pygments==2.19.1
+pyod==2.0.3
 pyparsing==3.2.1
 pytest==8.3.4
 python-dateutil==2.9.0.post0
@@ -67,23 +90,37 @@ pyzmq==26.2.1
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
+retrying==1.3.4
 rpds-py==0.23.1
 ruptures==1.1.9
-scikit-learn==1.6.1
-scipy==1.15.1
+schemdraw==0.15
+scikit-base==0.7.8
+scikit-learn==1.4.2
+scikit-plot==0.3.7
+scipy==1.11.4
 seaborn==0.13.2
 six==1.17.0
+sklearn-compat==0.1.3
+sktime==0.26.0
 soupsieve==2.6
 SQLAlchemy==2.0.38
 stack-data==0.6.3
 statsmodels==0.14.4
+tbats==1.1.3
+tenacity==9.0.0
 threadpoolctl==3.5.0
 tomli==2.2.1
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
+tsdownsample==0.1.4.1
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 wcwidth==0.2.13
+Werkzeug==3.0.6
+widgetsnbextension==4.0.13
+xxhash==3.5.0
+yellowbrick==1.5
 yfinance==0.2.54
+zipp==3.21.0
